--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,50 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Olópò Studio">
-    <main>
-        <h1>Olópò</h1>
-    </main>
+  <main
+    class="border h-dvh bg-orange-500 px-2 text-white flex flex-col gap-4 p-4"
+  >
+    <div>
+      <h1 class="text-[15vw] text-white leading-none">
+        <span class="font-light">olópò</span>
+        <span class="uppercase text-[8vw] font-bold">Studio</span>
+      </h1>
+      <!-- <p class="text-xl">
+        A design studio A design studio A design studio A design studio
+      </p> -->
+    </div>
+
+    <section class="flex flex-col gap-4">
+      <!-- <h2 class="text-5xl lowercase">Appetizers</h2> -->
+      <div class="flex flex-col gap-8 max-w-prose">
+        <div class="flex flex-col gap-2">
+          <div class="flex gap-2 items-center">
+            <h3 class="text-2xl">💌 Innkeeper</h3>
+            <span class="border px-2 rounded-full text-xs uppercase opacity-80"
+              >beta</span
+            >
+          </div>
+          <p class="text-lg">
+            AI powered shadow work journaling app based on Carl Jung's work,
+            sends daily personalized prompts via email, and you can respond
+            directly by email or use the web app.
+          </p>
+        </div>
+
+        <div class="flex flex-col gap-2">
+          <div class="flex items-center gap-4">
+            <h3 class="text-2xl">💸 InvoiceDeck</h3>
+            <span class="border px-2 rounded-full text-xs uppercase opacity-80"
+              >coming soon</span
+            >
+          </div>
+          <p class="text-lg">The best invoicing app you've ever used.</p>
+        </div>
+      </div>
+    </section>
+    <footer class="mt-auto flex gap-4 text-sm">
+      <a href="/terms-of-service" class="underline">Terms of Service</a>
+      <a href="/privacy-policy" class="underline">Privacy Policy</a>
+    </footer>
+  </main>
 </Layout>
