refactor: Update homepage content and improve code readability

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,10 +11,11 @@ import Layout from "../layouts/Layout.astro";
           <span class="font-black uppercase">olópò studio</span>
         </h1>
         <p class="text-lg max-w-prose px-4">
-          Olópò Studio is my experimental one-person playground, where I turn
-          'what ifs' into 'what is'. Olópò is a Yoruba word that translates to
-          'catering company' in English.
+          Olópò Studio is a experimental independent creative studio with aesthetic minimalism at
+          it's core.
         </p>
+
+        <!-- <span> Olópò is a Yoruba word that translates to 'catering company' in English. </span> -->
       </div>
 
       <div class="flex justify-between">
@@ -30,9 +31,9 @@ import Layout from "../layouts/Layout.astro";
                 >
               </div>
               <p class="text-lg">
-                AI powered shadow work journaling app based on Carl Jung's work,
-                sends daily personalized prompts via email, and you can respond
-                directly by email or use the web app.
+                AI powered shadow work journaling app based on Carl Jung's work, sends daily
+                personalized prompts via email, and you can respond directly by email or use the web
+                app.
               </p>
             </div>
 
@@ -45,8 +46,8 @@ import Layout from "../layouts/Layout.astro";
                 >
               </div>
               <p class="text-lg">
-                The best invoicing app you've ever used. Smooth as butter, no
-                sign up required, and works offline.
+                The best invoicing app you've ever used. Smooth as butter, no sign up required, and
+                works offline.
               </p>
             </div>
           </div>
@@ -55,10 +56,7 @@ import Layout from "../layouts/Layout.astro";
     </main>
     <footer class="flex items-start justify-between mt-auto px-4">
       <li class="flex flex-col gap-4 text-sm uppercase">
-        <a
-          href="mailto:contact@olopo.studio"
-          class="hover:text-yellow-300 duration-200">Contact</a
-        >
+        <a href="mailto:contact@olopo.studio" class="hover:text-yellow-300 duration-200">Contact</a>
         <a href="/privacy-policy" class="">Privacy Policy</a>
         <a href="/terms-of-service" class="">Terms of Service</a>
       </li>
