--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,8 +11,7 @@ import Layout from "../layouts/Layout.astro";
           <span class="font-black uppercase">olópò studio</span>
         </h1>
         <p class="text-lg max-w-prose px-4">
-          Olópò Studio is a experimental independent creative studio with aesthetic minimalism at
-          it's core.
+          Olópò Studio is an experimental creative studio with aesthetic minimalism at it's core.
         </p>
 
         <!-- <span> Olópò is a Yoruba word that translates to 'catering company' in English. </span> -->
