Revamp homepage design

--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -16,7 +16,7 @@ const { Content } = await entry.render();
 ---
 
 <Layout title={entry.data.title} description={entry.data.description}>
-  <div class="bg-orange-50 px-4 py-20 text-orange-950">
+  <div class="bg-orange-50 px-4 py-20 text-gray-800">
     <div class="max-w-prose mx-auto flex flex-col">
       <Content />
     </div>
