--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,18 +6,20 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="Olópò Studio">
   <div class="bg-orange-500 h-dvh text-orange-50 py-4 flex flex-col">
     <div class="fixed inset-0 flex items-center justify-center pointer-events-none">
-      <div class="w-px h-full bg-black/50 -translate-x-1/2 fixed inset-y-0"></div>
-      <div class="h-px w-full bg-black/50 -translate-y-1/2 fixed inset-x-0"></div>
-      <div class="border rounded-full border-black/50">
+      <div class="w-px h-full border-orange-300/90 border-[1px] -translate-x-1/2 fixed inset-y-0">
+      </div>
+      <div class="h-px w-full border-orange-300/90 border-[1px] -translate-y-1/2 fixed inset-x-0">
+      </div>
+      <div class="border rounded-full border-orange-300/90">
         <Globe client:load />
       </div>
     </div>
 
-    <main class="flex flex-col gap-20 grow items-start justify-center z-10 relative pt-10">
-      <div class="flex items-center gap-4 px-4 w-full">
-        <div class="flex flex-col gap-2">
-          <h1 class="text-2xl leading-none tracking-normal capitalize">
-            <span>🧑🏽‍🍳 olópò studio</span>
+    <main class="grid grid-rows-2 gap-20 grow items-start justify-center z-10 relative pt-10">
+      <div class="flex items-center gap-4 px-4 w-full self-end pb-10">
+        <div class="flex flex-col gap-0">
+          <h1 class="text-[5vw] leading-snug tracking-wide font-light capitalize">
+            <span class="font-sans -ml-2">olópò studio</span>
           </h1>
           <p class="text-lg">
             An experimental creative studio with aesthetic minimalism at its core.
@@ -33,7 +35,7 @@ import Layout from "../layouts/Layout.astro";
               <div class="flex gap-2 items-center">
                 <h3 class="text-2xl">💌 Innkeeper</h3>
                 <span
-                  class="border border-orange-200 text-orange-100 px-2 rounded-full text-xs uppercase opacity-80"
+                  class="border border-orange-200 text-white backdrop-blur-sm border-opacity-50 bg-white bg-opacity-20 px-2 rounded-full text-xs uppercase"
                   >beta</span
                 >
               </div>
@@ -48,7 +50,7 @@ import Layout from "../layouts/Layout.astro";
               <div class="flex items-center gap-2">
                 <h3 class="text-2xl">🍪 InvoiceDeck</h3>
                 <span
-                  class="border border-orange-200 text-orange-100 px-2 rounded-full text-xs uppercase"
+                  class="border border-orange-200 text-white border-opacity-50 bg-white bg-opacity-20 px-2 backdrop-blur-sm rounded-full text-xs uppercase"
                   >coming soon</span
                 >
               </div>
